--- a/index.html
+++ b/index.html
@@ -1462,8 +1462,8 @@
         <div class="container">
             <p>FoodFinances - Sistema de Gestão Financeira para Microempreendedores de Alimentos</p>
 
-            <p>© <span id="current-year"></span> - Todos os direitos reservados</p>
-            <p>Desenvolvido por <a href="https://portfolio-jhonne.vercel.app/" target="_blank">Carlos Jhonne</a></p>
+            <p>© <span id="current-year"></span> - Todos os direitos reservados.</p>
+            <p>Desenvolvido por <a href="https://portfolio-jhonne.vercel.app/" target="_blank">Carlos Jhonne.</a></p>
         </div>
     </footer>
 
