--- a/index.html
+++ b/index.html
@@ -2354,7 +2354,7 @@
                     
                     // Texto da legenda
                     pdf.text(item.text, margin + 6, yPos);
-                    currentLegendY += 5;
+                    yPos += 5;
                 });
                 
                 // Adicionar detalhes de ingredientes (em uma nova página)
