--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
     <header>
         <div class="container">
             <h1><i class="fas fa-calculator"></i> FoodFinances</h1>
-            <p class="subtitle">Sua ferramenta completa para gestão financeira de alimentos e bebidas</p>
+            <p class="subtitle">Sua ferramenta completa para gestão financeira de alimentos</p>
         </div>
     </header>
 
